unpackaged/main/default/objects/Plant_Product_Transaction__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Plant Product Transaction</relationshipLabel>
    <relationshipName>Plant_Product_Transaction</relationshipName>
    <type>Lookup</type>
</CustomField>