unpackaged/main/default/objects/Plant_Product_Transaction__c/fields/Additional_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Additional_Discount_Amount__c</fullName>
    <formula>Quote_Line__r.SBQQ__AdditionalDiscountAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Additional Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>