unpackaged/main/default/objects/Plant_Product_Transaction__c/fields/Additional_Discount_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Additional_Discount_Percentage__c</fullName>
    <formula>Quote_Line__r.SBQQ__Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Additional Discount Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>