unpackaged/main/default/objects/Plant_Product_Transaction__c/fields/Addl_Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>Addl_Discount_Percent__c</fullName>
    <description>This is the additional discount percentage entered by the User at the Quote line level</description>
    <inlineHelpText>This is the additional discount percentage entered by the User at the Quote line level</inlineHelpText>
    <label>Addl Discount Percent</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>