unpackaged/main/default/objects/Plant_Product_Transaction__c/fields/Amend_Action__c.field-meta.xml
<CustomField>
    <fullName>Amend_Action__c</fullName>
    <label>Amend Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Add Plant</fullName>
            </value>
            <value>
                <fullName>Remove Plant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>