unpackaged/main/default/objects/Plant_Product_Transaction__c/fields/Amend_Quote_Date__c.field-meta.xml
<CustomField>
    <fullName>Amend_Quote_Date__c</fullName>
    <label>Amend Quote Date</label>
    <type>Date</type>
</CustomField>