unpackaged/main/default/objects/Plant_Product_Transaction__c/fields/Amend_Quote_Qty__c.field-meta.xml
<CustomField>
    <fullName>Amend_Quote_Qty__c</fullName>
    <label>Amend Quote Qty</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>