unpackaged/main/default/objects/Plant_Product_Transaction__c/fields/Amendment_Action__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Action__c</fullName>
    <label>Amendment Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Added Plant</fullName>
            </value>
            <value>
                <fullName>Removed Plant</fullName>
            </value>
            <value>
                <fullName>No_Change</fullName>
                <label>No Change</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>