unpackaged/main/default/objects/Plant_Product_Transaction__c/fields/Amendment_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Quantity__c</fullName>
    <label>Amendment Quantity</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>