unpackaged/main/default/objects/Plant_Product_Transaction__c/fields/Annual_Recurring_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Annual_Recurring_Revenue__c</fullName>
    <formula>IF(TEXT( Product__r.SBQQ__SubscriptionPricing__c  ) = &#39;&#39;,0,( Quote_Line__r.SBQQ__NetTotal__c  /  Quote_Line__r.SBQQ__ProrateMultiplier__c )/( Quote_Line__r.SBQQ__DefaultSubscriptionTerm__c  / 12))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Recurring Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>