unpackaged/main/default/objects/Plant_Product_Transaction__c/fields/Asset_Class__c.field-meta.xml
<CustomField>
    <fullName>Asset_Class__c</fullName>
    <formula>TEXT(Product__r.Asset_Class__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Class</label>
    <type>Text</type>
</CustomField>