unpackaged/main/default/objects/Plant_Product_Transaction__c/fields/Bill_To_Account__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill To Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Plant Product Transactions (Bill To Account)</relationshipLabel>
    <relationshipName>Plant_Product_Transactions1</relationshipName>
    <type>Lookup</type>
</CustomField>