unpackaged/main/default/objects/Plant_Product_Transaction__c/fields/Bill_To_Contact__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill To Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Plant Product Transactions</relationshipLabel>
    <relationshipName>Plant_Product_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>