unpackaged/main/default/objects/Plant_Product_Transaction__c/fields/Connection_Type__c.field-meta.xml
<CustomField>
    <fullName>Connection_Type__c</fullName>
    <description>Connection Type used for Greenbyte Products</description>
    <inlineHelpText>Connection Type used for Greenbyte Products</inlineHelpText>
    <label>Connection Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>