unpackaged/main/default/objects/Plant_Product_Transaction__c/fields/Contracted_MW_Unit_List_Price__c.field-meta.xml
<CustomField>
    <fullName>Contracted_MW_Unit_List_Price__c</fullName>
    <label>Contracted MW Unit List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>