unpackaged/main/default/objects/Plant_Product_Transaction__c/fields/CRM_Project_Name__c.field-meta.xml
<CustomField>
    <fullName>CRM_Project_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CRM Project Name</label>
    <referenceTo>CRM_Project__c</referenceTo>
    <relationshipLabel>Plant Product Transactions</relationshipLabel>
    <relationshipName>Plant_Product_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>