unpackaged/main/default/objects/Plant_Product_Transaction__c/fields/Cumulative_Qty__c.field-meta.xml
<CustomField>
    <fullName>Cumulative_Qty__c</fullName>
    <label>Cumulative Qty</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>