unpackaged/main/default/objects/Plant_Product_Transaction__c/fields/Customer_Acceptance__c.field-meta.xml
<CustomField>
    <fullName>Customer_Acceptance__c</fullName>
    <label>Customer Acceptance</label>
    <type>Date</type>
</CustomField>