unpackaged/main/default/objects/Plant_Product_Transaction__c/fields/Customer_Provided_Priority__c.field-meta.xml
<CustomField>
    <fullName>Customer_Provided_Priority__c</fullName>
    <label>Customer-Provided Priority</label>
    <type>TextArea</type>
</CustomField>