unpackaged/main/default/objects/Plant_Product_Transaction__c/fields/Date_of_Amendment__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Amendment__c</fullName>
    <description>Date on which this Amendment is made. This is used to calculate the Prorate multiplier and pricing</description>
    <inlineHelpText>Date on which this Amendment is made. This is used to calculate the Prorate multiplier and pricing</inlineHelpText>
    <label>Date of Amendment</label>
    <type>Date</type>
</CustomField>