unpackaged/main/default/objects/Plant_Product_Transaction__c/fields/Delete_Plant__c.field-meta.xml
<CustomField>
    <fullName>Delete_Plant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delete Plant</label>
    <type>Checkbox</type>
</CustomField>