unpackaged/main/default/objects/Plant_Product_Transaction__c/fields/Deployment_date__c.field-meta.xml
<CustomField>
    <fullName>Deployment_date__c</fullName>
    <label>Deployment date</label>
    <type>Date</type>
</CustomField>