unpackaged/main/default/objects/Plant_Product_Transaction__c/fields/Did_not_renew_subscription__c.field-meta.xml
<CustomField>
    <fullName>Did_not_renew_subscription__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Did not renew subscription​</label>
    <type>Checkbox</type>
</CustomField>