unpackaged/main/default/objects/Plant_Product_Transaction__c/fields/Discount_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Discount_Percentage__c</fullName>
    <description>Get the value for this field when Discount Tier is calculated from DPSA Contracted Discount record</description>
    <label>Discount Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>