unpackaged/main/default/objects/Plant_Product_Transaction__c/fields/Discount_Tier__c.field-meta.xml
<CustomField>
    <fullName>Discount_Tier__c</fullName>
    <label>Discount Tier</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>