unpackaged/main/default/objects/Plant_Product_Transaction__c/fields/Effective_Date_Custom__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date_Custom__c</fullName>
    <formula>If(NOT(ISNULL(Quote_Line__r.SBQQ__Quote__r.SBQQ__StartDate__c)),Quote_Line__r.SBQQ__Quote__r.SBQQ__StartDate__c,Quote_Line__r.SBQQ__StartDate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Effective Date not  to be used</label>
    <type>Date</type>
</CustomField>