unpackaged/main/default/objects/Plant_Product_Transaction__c/fields/End_Date_Custom__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Custom__c</fullName>
    <formula>IF(NOT(ISNULL(Quote_Line__r.SBQQ__Quote__r.SBQQ__EndDate__c)),Quote_Line__r.SBQQ__Quote__r.SBQQ__EndDate__c,Quote_Line__r.SBQQ__EndDate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date</label>
    <type>Date</type>
</CustomField>