unpackaged/main/default/objects/Plant_Product_Transaction__c/fields/Expired_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Expired_Subscription__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To Find that the Subscription Record has Expired or not.</description>
    <label>Expired Subscription</label>
    <type>Checkbox</type>
</CustomField>