unpackaged/main/default/objects/Plant_Product_Transaction__c/fields/First_Delivered_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>First_Delivered_Timestamp__c</fullName>
    <label>First Delivered Timestamp</label>
    <type>DateTime</type>
</CustomField>