unpackaged/main/default/objects/Plant_Product_Transaction__c/fields/Hint__c.field-meta.xml
<CustomField>
    <fullName>Hint__c</fullName>
    <label>System Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Update Default Amend Quote Line for the same discount tier</fullName>
            </value>
            <value>
                <fullName>Create New Quote Line with this product and Tier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>