unpackaged/main/default/objects/Plant_Product_Transaction__c/fields/Implementation_Price__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Price__c</fullName>
    <label>Implementation Price</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>