unpackaged/main/default/objects/Plant_Product_Transaction__c/fields/Implementation_SKU_Qty__c.field-meta.xml
<CustomField>
    <fullName>Implementation_SKU_Qty__c</fullName>
    <description>This field will hold Qty 1 for each implementation product</description>
    <label>Implementation SKU Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>