unpackaged/main/default/objects/Plant_Product_Transaction__c/fields/Implementation_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Start_Date__c</fullName>
    <formula>IF(ISBLANK(Project_Name__c),Manual_Entry_Implementation_Start_Date__c,  Project_Name__r.Implementation_start_date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Implementation Start Date</label>
    <type>Date</type>
</CustomField>