unpackaged/main/default/objects/Plant_Product_Transaction__c/fields/Initial_Mega_Watt_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Initial_Mega_Watt_Quantity__c</fullName>
    <label>Do not use Mega Watt Quantity</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>