unpackaged/main/default/objects/Plant_Product_Transaction__c/fields/Installation_Commencement_Date__c.field-meta.xml
<CustomField>
    <fullName>Installation_Commencement_Date__c</fullName>
    <label>Installation Commencement Date</label>
    <type>Date</type>
</CustomField>