unpackaged/main/default/objects/Plant_Product_Transaction__c/fields/Is_Project_Added__c.field-meta.xml
<CustomField>
    <fullName>Is_Project_Added__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Project Added</label>
    <type>Checkbox</type>
</CustomField>