unpackaged/main/default/objects/Plant_Product_Transaction__c/fields/Manual_Entry_Implementation_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Manual_Entry_Implementation_Start_Date__c</fullName>
    <inlineHelpText>Enter a date here if there is no Project in Veritas by which the implementation start date can be set.</inlineHelpText>
    <label>Manual Entry Implementation Start Date</label>
    <type>Date</type>
</CustomField>