unpackaged/main/default/objects/Plant_Product_Transaction__c/fields/MWp_Quantity__c.field-meta.xml
<CustomField>
    <fullName>MWp_Quantity__c</fullName>
    <label>MW Quantity</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>