unpackaged/main/default/objects/Plant_Product_Transaction__c/fields/Net_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Net_Total_Price__c</fullName>
    <formula>( Net_Unit_Price__c * Quote_Line_Quantity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>