unpackaged/main/default/objects/Plant_Product_Transaction__c/fields/Net_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Net_Unit_Price__c</fullName>
    <formula>If ( AND( ISNULL ( Additional_Discount_Percentage__c ) ,ISNULL (Unit_Price_After_Volume_Discount__c),ISNULL ( Additional_Discount_Amount__c ) ),

(Contracted_MW_Unit_List_Price__c*PPT_Prorate_Multiplier__c) ,

If (AND ( ISNULL (Additional_Discount_Percentage__c ),NOT( ISNULL( Unit_Price_After_Volume_Discount__c )),ISNULL ( Additional_Discount_Amount__c )),

(Unit_Price_After_Volume_Discount__c*PPT_Prorate_Multiplier__c) ,

If( AND(NOT(ISNULL( Additional_Discount_Percentage__c )),ISNULL( Unit_Price_After_Volume_Discount__c ),ISNULL ( Additional_Discount_Amount__c )),

((Contracted_MW_Unit_List_Price__c *((100 - Additional_Discount_Percentage__c )/100))*PPT_Prorate_Multiplier__c),

If( AND(NOT(ISNULL( Additional_Discount_Percentage__c )),NOT(ISNULL( Unit_Price_After_Volume_Discount__c )),ISNULL ( Additional_Discount_Amount__c )),

(Unit_Price_After_Volume_Discount__c *((100 - Additional_Discount_Percentage__c	)/100)*PPT_Prorate_Multiplier__c),

If ( AND( ISNULL ( Additional_Discount_Amount__c ) ,ISNULL (Unit_Price_After_Volume_Discount__c),ISNULL ( Additional_Discount_Percentage__c ) ),

(Contracted_MW_Unit_List_Price__c*PPT_Prorate_Multiplier__c) ,

If (AND ( ISNULL (Additional_Discount_Amount__c ),NOT( ISNULL( Unit_Price_After_Volume_Discount__c )), ISNULL ( Additional_Discount_Percentage__c )),

(Unit_Price_After_Volume_Discount__c*PPT_Prorate_Multiplier__c) ,

If( AND(NOT(ISNULL( Additional_Discount_Amount__c )),ISNULL( Unit_Price_After_Volume_Discount__c ),ISNULL ( Additional_Discount_Percentage__c )),

(Contracted_MW_Unit_List_Price__c *Additional_Discount_Amount__c *PPT_Prorate_Multiplier__c),

If( AND(NOT(ISNULL( Additional_Discount_Amount__c )),NOT(ISNULL( Unit_Price_After_Volume_Discount__c )),ISNULL ( Additional_Discount_Percentage__c)),

(Unit_Price_After_Volume_Discount__c *Additional_Discount_Amount__c*PPT_Prorate_Multiplier__c),

NULL))))))))</formula>
    <label>Net Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>