unpackaged/main/default/objects/Plant_Product_Transaction__c/fields/Netsuite_Integration_Ignore_Flag__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_Integration_Ignore_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this is for the ignoring the record for Netsuite Integration</description>
    <inlineHelpText>this is for the ignoring the record for Netsuite Integration</inlineHelpText>
    <label>Netsuite Integration Ignore Flag</label>
    <type>Checkbox</type>
</CustomField>