unpackaged/main/default/objects/Plant_Product_Transaction__c/fields/Netsuite_Reprocess_Flag__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_Reprocess_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this is for the Business/NS team to reprocess the same record</description>
    <label>Netsuite Reprocess Flag</label>
    <type>Checkbox</type>
</CustomField>