unpackaged/main/default/objects/Plant_Product_Transaction__c/fields/Operational_Status__c.field-meta.xml
<CustomField>
    <fullName>Operational_Status__c</fullName>
    <formula>TEXT( Plant__r.Plant__r.Operational_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Operational Status</label>
    <type>Text</type>
</CustomField>