unpackaged/main/default/objects/Plant_Product_Transaction__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Plant Product Transactions</relationshipLabel>
    <relationshipName>Plant_Product_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>