unpackaged/main/default/objects/Plant_Product_Transaction__c/fields/Order_Product__c.field-meta.xml
<CustomField>
    <fullName>Order_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Plant Product Transaction</relationshipLabel>
    <relationshipName>Plant_Product_Transaction</relationshipName>
    <type>Lookup</type>
</CustomField>