unpackaged/main/default/objects/Plant_Product_Transaction__c/fields/Plant_Product__c.field-meta.xml
<CustomField>
    <fullName>Plant_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Plant Product</label>
    <type>Checkbox</type>
</CustomField>