unpackaged/main/default/objects/Plant_Product_Transaction__c/fields/PPT_ARR__c.field-meta.xml
<CustomField>
    <fullName>PPT_ARR__c</fullName>
    <formula>IF(TEXT( Product__r.SBQQ__SubscriptionPricing__c ) = &#39;&#39;,0,(  Net_Total_Price__c )/ PPT_Prorate_Multiplier__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PPT ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>