unpackaged/main/default/objects/Plant_Product_Transaction__c/fields/PPT_Prorate_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>PPT_Prorate_Multiplier__c</fullName>
    <formula>IF(
   Quote_Type__c == &#39;Amendment&#39; &amp;&amp;  ISPICKVAL(Amendment_Action__c, &#39;Added Plant&#39;) , 
     (Quote__r.SBQQ__EndDate__c  - Date_of_Amendment__c ) / (Quote__r.SBQQ__EndDate__c  - Quote__r.SBQQ__StartDate__c) , 
   if(
       Quote_Type__c == &#39;Amendment&#39; &amp;&amp;  ISPICKVAL(Amendment_Action__c, &#39;Removed Plant&#39;) , 
         ( Date_of_Amendment__c  - Quote__r.SBQQ__StartDate__c) / (Quote__r.SBQQ__EndDate__c  - Quote__r.SBQQ__StartDate__c) ,
         (End_Date__c - Effective_Date__c)/365
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PPT Prorate Multiplier</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>