unpackaged/main/default/objects/Plant_Product_Transaction__c/fields/PPT_Type__c.field-meta.xml
<CustomField>
    <fullName>PPT_Type__c</fullName>
    <label>PPT Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Add</fullName>
            </value>
            <value>
                <fullName>Remove</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>