unpackaged/main/default/objects/Plant_Product_Transaction__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Plant Product Transaction</relationshipLabel>
    <relationshipName>Plant_Product_Transaction</relationshipName>
    <type>Lookup</type>
</CustomField>