unpackaged/main/default/objects/Plant_Product_Transaction__c/fields/QLI_Name__c.field-meta.xml
<CustomField>
    <fullName>QLI_Name__c</fullName>
    <formula>Quote_Line__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QLI Name</label>
    <type>Text</type>
</CustomField>