unpackaged/main/default/objects/Plant_Product_Transaction__c/fields/Quote_Line_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_Quantity__c</fullName>
    <description>This is the field where the User will enter the Quantity - which in turn will add to the aggregate Quantity on the Quote line. e.g. for a Product with Unit of Measure as Turbines (WTG), this filed will have the number of Turbines and the MWp_Quantity__c (which is going to be renamed to MW_Quantity__c later) will have the MW for the WTG plant</description>
    <inlineHelpText>This is the field where the User will enter the Quantity - which in turn will add to the aggregate Quantity on the Quote line. e.g. for a Product with Unit of Measure as Turbines (WTG), this filed will have the number of Turbines and the MWp_Quantity__c (which is going to be renamed to MW_Quantity__c later) will have the MW for the WTG plant</inlineHelpText>
    <label>Quote Line Quantity</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>