unpackaged/main/default/objects/Plant_Product_Transaction__c/fields/Quote_Type__c.field-meta.xml
<CustomField>
    <fullName>Quote_Type__c</fullName>
    <formula>TEXT( Quote__r.SBQQ__Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Type</label>
    <type>Text</type>
</CustomField>