unpackaged/main/default/objects/Plant_Product_Transaction__c/fields/Renewal_Action__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Action__c</fullName>
    <label>Renewal Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Added Plant</fullName>
            </value>
            <value>
                <fullName>Removed Plant</fullName>
            </value>
            <value>
                <fullName>No Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>