unpackaged/main/default/objects/Plant_Product_Transaction__c/fields/Running_Cumulative__c.field-meta.xml
<CustomField>
    <fullName>Running_Cumulative__c</fullName>
    <label>Running Cumulative</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>