unpackaged/main/default/objects/Plant_Product_Transaction__c/fields/Scope_Definition__c.field-meta.xml
<CustomField>
    <fullName>Scope_Definition__c</fullName>
    <label>Scope Definition</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>