unpackaged/main/default/objects/Plant_Product_Transaction__c/fields/Scope_Title__c.field-meta.xml
<CustomField>
    <fullName>Scope_Title__c</fullName>
    <label>Scope Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>