unpackaged/main/default/objects/Plant_Product_Transaction__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Purchase Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quoted</fullName>
            </value>
            <value>
                <fullName>Ordered</fullName>
            </value>
            <value>
                <fullName>Contracted</fullName>
            </value>
            <value>
                <fullName>Amendment_Quoted</fullName>
                <label>Amendment Quoted</label>
            </value>
            <value>
                <fullName>Renewal Quoted</fullName>
            </value>
            <value>
                <fullName>Decommissioned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>