unpackaged/main/default/objects/Plant_Product_Transaction__c/fields/Subscription__c.field-meta.xml
<CustomField>
    <fullName>Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subscription</label>
    <referenceTo>SBQQ__Subscription__c</referenceTo>
    <relationshipLabel>Plant Product Transaction</relationshipLabel>
    <relationshipName>Plant_Product_Transaction</relationshipName>
    <type>Lookup</type>
</CustomField>